--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -62,34 +62,38 @@
             app:layout_constraintStart_toEndOf="@+id/imageViewFood"
             app:layout_constraintTop_toBottomOf="@+id/textViewPrice">
 
-            <Button
+            <TextView
                 android:id="@+id/buttonMinus"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/rounded_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/quantity_button_background"
+                android:gravity="center"
                 android:text="-"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:text="1"
                 android:textColor="@color/text_primary"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <Button
+            <TextView
                 android:id="@+id/buttonPlus"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/rounded_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/quantity_button_background"
+                android:gravity="center"
                 android:text="+"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -117,4 +121,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
-
