--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -19,15 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/backButton"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_centerVertical="true"
-                android:padding="4dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_back"
-                android:contentDescription="Back" />
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -309,7 +301,7 @@
                     android:background="@drawable/rounded_button_outline"
                     android:padding="12dp"
                     android:text="HỦY"
-                    android:textColor="@color/primary"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
 
                 <Button
