--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -56,7 +56,7 @@
                         android:id="@+id/imageViewProfile"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/placeholder_user"
+                        android:src="@drawable/app_logo"
                         app:civ_border_color="@color/primary"
                         app:civ_border_width="2dp" />
 
